# vocabdemy-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PYTHON_VERSION  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pylintrc  pyproject.toml  pytest.ini  requirements.txt  server.py  test-requirements.txt
.circleci/: config.yml
.github/workflows/: black.yml  ci.yml  ruff.yml
app/: Dockerfile  create_app.py  database.py  main.py  requirements.txt
app/api/: utils.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: users.py  vocabs.py
app/controllers/: vocab.py
app/core/: config.py  constants.py
app/crud/: crud_user.py  crud_vocab.py
app/db/: base.py  base_class.py  database.py  init_db.py  session.py
app/dependencies/: controller.py  db_session.py
app/models/: group.py  loaded_base.py  user.py  vocab.py
app/routers/: vocab.py
app/schema/: __init__.py  vocab.py
app/schemas/: __init__.py  user.py
app/src/: main.py
app/tests/: test_vocab.py
docs/source/: conf.py  index.rst
