[tool.poetry]
name = "vocabdemy-backend"
version = "0.1.0"
description = ""
authors = [
    "kevinliao852 <q85292542000@gmail.com>",
    "mukappalambda <maokailan24@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
psycopg2 = "^2.9.5"
fastapi = "^0.104.0"
uvicorn = "^0.21.1"
pytest = "^7.2.2"
httpx = "^0.23.3"
pydantic = "<2.0.0"
pytest-mock = "^3.12.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
