[project]
name = "vocabdemy-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pylint>=3.3.8",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
